# shinkai-node

./: .cursorrules  .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Dockerfile.shinkai-app  Dockerfile.wasm  LICENSE  README.md  TODO.md  build.rs  deno.json  docker-compose.yml  import_map.json  node1_create_message.sh  prev.main.backup  run_connect.sh  run_connect_2.sh  run_listener.sh  tech_specs
shinkai-bin/shinkai-executor/: .gitignore  Cargo.toml  README.md  build.rs
shinkai-bin/shinkai-executor/openapi/: openapi.yaml
shinkai-bin/shinkai-executor/pdfium/: build.sh  run-docker-build.sh
shinkai-bin/shinkai-executor/src/: main.rs
shinkai-bin/shinkai-executor/tests/: executor-tests.rs
shinkai-bin/shinkai-node/: Cargo.toml  build.rs
shinkai-bin/shinkai-node/examples/: generate_openapi_docs.rs
shinkai-bin/shinkai-node/src/: lib.rs  main.rs  runner.rs
shinkai-bin/shinkai-node/tests/: HOW_TO.md  it_mod.rs
shinkai-cli-tools/shinkai-subscription-management-cli/: Cargo.toml  spammer.sh  streamer.key  subscriber.key
shinkai-cli-tools/shinkai-subscription-management-cli/src/: http_requests.rs  lib.rs  main.rs  subscription_manager.rs
shinkai-libs/shinkai-baml/: Cargo.toml
shinkai-libs/shinkai-baml/src/: baml_builder.rs  lib.rs  main.rs
shinkai-libs/shinkai-crypto-identities/: Cargo.toml
shinkai-libs/shinkai-crypto-identities/src/: lib.rs  shinkai_registry.rs
shinkai-libs/shinkai-db/: Cargo.toml
shinkai-libs/shinkai-dsl/: Cargo.toml
shinkai-libs/shinkai-dsl/src/: dsl_schemas.rs  lib.rs  main.rs  parser.rs  sm_executor.rs  structs.rs  workflow.pest
shinkai-libs/shinkai-dsl/tests/: parser_tests.rs  pest_basic_tests.rs  pest_tests.rs  pest_workflow_no_registers_tests.rs  pest_workflow_tests.rs  pest_workflow_with_registers_tests.rs  sm_executor_tests.rs
shinkai-libs/shinkai-embedding/: Cargo.toml
shinkai-libs/shinkai-embedding/src/: embedding_generator.rs  lib.rs  mock_generator.rs  model_type.rs  shinkai_embedding_errors.rs
shinkai-libs/shinkai-fs/: Cargo.toml  new_file.txt
shinkai-libs/shinkai-fs-mirror/: Cargo.toml  README.md
shinkai-libs/shinkai-fs-mirror/files/: shinkai_intro.vrkai
shinkai-libs/shinkai-fs-mirror/src/: http_requests.rs  lib.rs  main.rs  persistence.rs  synchronizer.rs
shinkai-libs/shinkai-fs-mirror/tests/: creation_time_tests.rs  device_keys_tests.rs  retrieve_current_state_tests.rs  sync_tests.rs
shinkai-libs/shinkai-fs-synchronizer/: .env.example  .gitignore  Cargo.toml
shinkai-libs/shinkai-fs-synchronizer/src/: communication.rs  lib.rs  main.rs  shinkai_manager.rs  synchronizer.rs  visitor.rs
shinkai-libs/shinkai-fs-synchronizer/tests/: test_fs_synchronizer.rs  test_persistent_store.rs  test_shinkai_node.rs
shinkai-libs/shinkai-fs/src/: embedding_generator.rs  file_manager.rs  lib.rs  model_type.rs  shinkai_file_manager.rs  shinkai_file_manager_ops.rs  shinkai_fs_error.rs  test_utils.rs
shinkai-libs/shinkai-fs/tests/: pdf_parsing_tests.rs  vector_resource_tests.rs
shinkai-libs/shinkai-graphrag/: Cargo.toml  README.md
shinkai-libs/shinkai-graphrag/src/: indexer_adapters.rs  lib.rs  models.rs
shinkai-libs/shinkai-graphrag/tests/: global_search_tests.rs  it_mod.rs  local_search_tests.rs
shinkai-libs/shinkai-http-api/: Cargo.toml
shinkai-libs/shinkai-http-api/src/: error.rs  lib.rs  node_api_router.rs  node_commands.rs
shinkai-libs/shinkai-job-queue-manager/: Cargo.toml
shinkai-libs/shinkai-job-queue-manager/src/: job_queue_manager.rs  job_queue_manager_error.rs  lib.rs
shinkai-libs/shinkai-lancedb/: Cargo.toml
shinkai-libs/shinkai-lancedb/src/: lib.rs
shinkai-libs/shinkai-libp2p-relayer/: .dockerignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  SHINKAI_NETWORKING.md  USAGE.md
shinkai-libs/shinkai-libp2p-relayer/examples/: protocol_debug.rs  relay_client.rs  test_connection.rs  test_external_ip.rs  test_identity_resolution.rs
shinkai-libs/shinkai-libp2p-relayer/src/: lib.rs  libp2p_server.rs  main.rs  relay_manager.rs  relay_message.rs  server_error.rs
shinkai-libs/shinkai-libp2p-relayer/tests/: integration_test.rs  relayer_tests.rs
shinkai-libs/shinkai-mcp/: Cargo.toml  node_exit_on_epipe.js
shinkai-libs/shinkai-mcp/src/: command.rs  error.rs  lib.rs  utils.rs  (+1 more)
shinkai-libs/shinkai-message-mobile/: Cargo.toml  build.rs  compile_fat_lib.sh  shinkai_message_mobile.h
shinkai-libs/shinkai-message-primitives/: Cargo.toml
shinkai-libs/shinkai-message-pyo3/: Cargo.toml  Dockerfile  Dockerfile.build  README.md  compile.sh  mac_compile.sh  manylinux_compile.sh  pyproject.toml  run_tests.sh  setup.py
shinkai-libs/shinkai-message-wasm/: Cargo.toml
shinkai-libs/shinkai-mini-libs/: Cargo.toml
shinkai-libs/shinkai-non-rust-code/: Cargo.toml
shinkai-libs/shinkai-ocr/: .gitignore  Cargo.toml  README.md  build.rs  thinkos.md
shinkai-libs/shinkai-pdf-parser/: Cargo.toml  README.md
shinkai-message-wasm/: Cargo.toml  README.md  build.rs  setup.py
shinkai-message-wasm/protos/: shinkai_message_proto.proto
shinkai-message-wasm/shinkai-app/: vite.config.ts
shinkai-message-wasm/src/: lib.rs  main.rs
shinkai-message-wasm/tests/: serialized_agent_conversion_tests.rs  shinkai_jobs_tests.rs  shinkai_message_builder_tests.rs  shinkai_message_tests.rs  shinkai_name_tests.rs
shinkai-message-wasm/web-example/: index.html  main.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
shinkai-side-executor/: .gitignore  Cargo.toml  README.md  benchmark.sh  build.rs  ocrs-images.sh  ocrs-pages.sh
shinkai-side-executor/files/: mermaid-chart.txt
shinkai-side-executor/layout/: layout.json
shinkai-side-executor/openapi/: openapi.yaml
shinkai-side-executor/pdfium/: args.gn  build.sh
shinkai-side-executor/pdfium-build/: args.gn  build.sh
shinkai-side-executor/src/: lib.rs  main.rs
shinkai-side-executor/tests/: side-executor-tests.rs
shinkai-test-framework/: Cargo.toml
shinkai-test-framework/src/: context.rs  lib.rs
shinkai-vector-resources/: Cargo.toml
shinkai-vector-resources/src/: embedding_generator.rs  resource_errors.rs  vector_resource.rs
(+2089 files in other folders)
