[workspace]
members = [
  "shinkai-libs/shinkai-crypto-identities",
  "shinkai-libs/shinkai-sheet",
  "shinkai-libs/shinkai-message-primitives",
  "shinkai-libs/shinkai-ocr",
  "shinkai-libs/shinkai-tcp-relayer",
  "shinkai-libs/shinkai-job-queue-manager",
  # "shinkai-libs/shinkai-baml",
  "shinkai-libs/shinkai-fs",
  "shinkai-libs/shinkai-embedding",
  "shinkai-libs/shinkai-http-api",
  "shinkai-libs/shinkai-tools-primitives",
  "shinkai-libs/shinkai-mini-libs",
  "shinkai-libs/shinkai-sqlite",
  "shinkai-libs/shinkai-spreadsheet-llm",
  "shinkai-bin/*",
]
resolver = "2"

[workspace.package]
version = "0.9.2"
edition = "2021"
authors = ["Nico Arqueros <nico@shinkai.com>"]

[workspace.dependencies]
shinkai_message_primitives = { path = "./shinkai-libs/shinkai-message-primitives" }
shinkai_crypto_identities = { path = "./shinkai-libs/shinkai-crypto-identities" }
shinkai_tcp_relayer = { path = "./shinkai-libs/shinkai-tcp-relayer" }
shinkai_sheet = { path = "./shinkai-libs/shinkai-sheet" }
shinkai_ocr = { path = "./shinkai-libs/shinkai-ocr" }
shinkai_job_queue_manager = { path = "./shinkai-libs/shinkai-job-queue-manager" }
# shinkai_baml = { path = "./shinkai-libs/shinkai-baml" }
shinkai_http_api = { path = "./shinkai-libs/shinkai-http-api" }
shinkai_tools_primitives = { path = "./shinkai-libs/shinkai-tools-primitives" }
shinkai_mini_libs = { path = "./shinkai-libs/shinkai-mini-libs" }
shinkai_sqlite = { path = "./shinkai-libs/shinkai-sqlite" }
shinkai_fs = { path = "./shinkai-libs/shinkai-fs" }
shinkai_embedding = { path = "./shinkai-libs/shinkai-embedding" }

futures = "0.3.30"
keyphrases = "0.3.3"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7.13"
bincode = "1.3.3"
log = "0.4.20"
chrono = "0.4"
serde_json = "1.0.117"
anyhow = "1.0"
blake3 = "1.2.0"
shinkai_tools_runner = "0.9.5"
serde = "1.0.188"
base64 = "0.22.0"
reqwest = "0.11.27"
regex = "1"
uuid = { version = "1.6.1" }
rand = "=0.8.5"
chrono-tz = "0.5"
hex = "=0.4.3"
env_logger = "0.11.5"
async-trait = "0.1.74"