[package]
name = "shinkai_message_wasm"
version = "0.1.0"
edition = "2018"
authors = ["Nico Arqueros <nico@shinkai.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.66"
serde-wasm-bindgen = "0.3"
chacha20poly1305 = "0.7.1"
sha2 = "0.9.5"
x25519-dalek = "1.2.0"
ed25519-dalek = "1.0.1"
rand_os = "0.2.2"
rand = "0.8"
wasm-bindgen = "0.2.87"
bs58 = "0.4"
chrono = "0.4"
chrono-tz = "0.5"
regex = "1"
bincode = "1.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[dependencies.serde]
version = "1.0.105"
features = ["derive"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.2"


