[package]
name = "shinkai-side-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
pdfium-render = { version = "=0.8.20", features = ["static", "libc++"] }
shinkai_vector_resources = { path = "../shinkai-libs/shinkai-vector-resources", default-features = false }
