[package]
name = "shinkai-vector-resources"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
env_logger = "0.9"
anyhow = "1.0"
regex = "1"
csv = "1.1.6"
reqwest = { version = "0.11", features = ["json", "tokio-native-tls", "blocking"] }
serde_json = "1.0.66"
byteorder = "1.4.3"
ordered-float = "3.7.0"
# llm = { git = "https://github.com/rustformers/llm", branch="main"} 


[dependencies.serde]
version = "1.0.105"
features = ["derive"]
