[package]
name = "shinkai-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
image = "0.25.1"
ocrs = "0.7.0"
pdfium-render = { version = "=0.8.20" }
reqwest = { version = "0.12" }
rten = { version = "0.9.0" }
serde_json = "1.0.117"
shinkai_message_primitives = { workspace = true }
shinkai_vector_resources = { workspace = true }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }

[features]
default = []
static = ["pdfium-render/static", "pdfium-render/libc++"]
