[package]
name = "shinkai-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
reqwest = { version = "0.12" }
serde_json = "1.0.117"
shinkai_message_primitives = { path = "../../shinkai-libs/shinkai-message-primitives" }
shinkai_vector_resources = { path = "../../shinkai-libs/shinkai-vector-resources", features = ["static-pdf-parser"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3.7"

[dependencies.serde]
version = "1.0.202"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0"
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
