[package]
name = "shinkai_node"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# this makes `cargo run` in the workspace root to run this package
default-run = "shinkai_node"

[build-dependencies]
shinkai_tools_runner = { workspace = true, features = ["built-in-tools"] }

[features]
default = []
console = ["console-subscriber"]
static-pdf-parser = ["shinkai_vector_resources/static-pdf-parser"]

[lib]
doctest = false

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
async-trait = "0.1.74"
warp = { version = "0.3.7", features = ["compression-gzip"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
rand = { workspace = true }
chashmap = "2.2.2"
async-channel = "1.6.1"
lazy_static = "1.5.0"
clap = "3.0.0-beta.5"
regex = { workspace = true }
csv = "1.1.6"
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = [
    "json",
    "tokio-native-tls",
    "blocking",
    "stream",
] }
keyphrases = { workspace = true }
shinkai_message_primitives = { workspace = true }
shinkai_crypto_identities = { workspace = true }
shinkai_job_queue_manager = { workspace = true }
shinkai_vector_resources = { workspace = true }
shinkai_tools_primitives = { workspace = true }
shinkai_tcp_relayer = { workspace = true }
shinkai_vector_fs = { workspace = true }
shinkai_http_api = { workspace = true }
shinkai_sqlite = { workspace = true }
shinkai_sheet = { workspace = true }
# shinkai_baml = { workspace = true }
bincode = { workspace = true }
qrcode = "0.12"
image = "0.23"
urlencoding = "2.1.0"
hex = { workspace = true }
aes-gcm = "0.10.3"
blake3 = { workspace = true }
cron-parser = "0.8.1"
ethers = "2.0"
dashmap = "5.5.3"
tiny-bip39 = "0.8.0"
async-lock = "2.4.0"
governor = "0.6.3"
lru = "0.7.0"
shinkai_tools_runner = { workspace = true, features = ["built-in-tools"] }
console-subscriber = { version = "0.1", optional = true }
downcast-rs = "1.2.1"
bip32 = "0.5.2"
bigdecimal = "0.2.2"
rust_decimal = "1.17.0"
umya-spreadsheet = "2.1.1"
rcgen = "0.13.1"
serde = { workspace = true, features = ["derive"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.25"
rusqlite = { version = "0.32.1", features = ["bundled"] }
async-std = { version = "1.5.0", features = ["unstable"] }
env_logger = { workspace = true }
zip = "2.2.1"

[dev-dependencies]
mockito = "1.0.2"
tokio-tungstenite = "0.15.0"
tempfile = "3.10.1"
fs_extra = "1.2.0"
utoipa = { version = "4.2.3", features = ["yaml"] }
