[package]
name = "shinkai_subscription_management_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shinkai_message_primitives = { path = "../../shinkai-libs/shinkai-message-primitives" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
rand = "0.8"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.72"
serde_json = "1.0.117"
clap = "3.0"
chrono = "0.4"
chrono-tz = "0.5"
multipart = "0.17"
reqwest = "0.11.26"
dotenv = "0.15.0"
base64 = "0.22.0"
hex = "0.4.3"
libsodium-sys-stable = "1.20.5"
aes-gcm = "0.10.3"
async-channel = "1.6.1"
warp = "0.3.6"

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
features = ["lz4"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]