[package]
name = "shinkai_baml"
version = "0.1.0"
edition = "2021"

[dependencies]
baml-runtime = { git = "https://github.com/BoundaryML/baml.git", tag = "0.56.1", package = "baml-runtime", features = [
    "internal",
] }
baml-types = { git = "https://github.com/BoundaryML/baml.git", tag = "0.56.1", package = "baml-types" }
env_logger = "0.9"
log = { workspace = true }
anyhow = { workspace = true }
indexmap = { version = "2.1.0", features = ["serde"] }
regex = { workspace = true }
serde_json = { workspace = true }
