[package]
name = "shinkai_crypto_identities"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono-tz = { workspace = true }
ethers = "2.0"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
bytes = "1"
serde_json = { workspace = true }
clap = { version = "3", features = ["derive"] }
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = { workspace = true }
chrono = { workspace = true }
dashmap = "5.5.3"
tiny-bip39 = "0.8.0"
lazy_static = "1.5.0"
trust-dns-resolver = "0.23.2"

[dependencies.serde]
workspace = true
features = ["derive"]
