[package]
name = "shinkai_crypto_identities"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0"
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
chrono = { workspace = true }
dashmap = "5.5.3"
lazy_static = "1.5.0"
trust-dns-resolver = "0.23.2"
