[package]
name = "shinkai_crypto_identities"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
shinkai_message_primitives = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }
trust-dns-resolver = "0.23.2"
shinkai_non_rust_code = { workspace = true }
tempfile = { workspace = true }
