[package]
name = "shinkai_db"
version = "0.1.0"
edition = "2021"

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_vector_resources = { workspace = true }
shinkai_sheet = { workspace = true }
chrono = "0.4"
blake3 = "1.2.0"
bincode = "1.3.3"
serde_json = "1.0.117"
rust_decimal = "1.17.0"
rand = "=0.8"
tokio = { version = "1.36", features = ["full"] }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
hex = "=0.4.3"
async-trait = "0.1.74"

[dependencies.rocksdb]
version = "0.22.0"
default-features = false
features = ["lz4"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]