[package]
name = "shinkai_db"
version = "0.1.0"
edition = "2021"

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_vector_resources = { workspace = true }
shinkai_sheet = { workspace = true }
tokio = { workspace = true, features = ["full"] }
blake3 = { workspace = true }
chrono = { workspace = true }
bincode = "1.3.3"
serde_json = { workspace = true }
rust_decimal = "1.17.0"
rand = { workspace = true }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
hex = { workspace = true }
async-trait = "0.1.74"

[dependencies.rocksdb]
workspace = true
features = ["lz4"]

[dependencies.serde]
workspace = true
features = ["derive"]
