[package]
name = "shinkai_db"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_tools_primitives = { workspace = true }
shinkai_vector_resources = { workspace = true }
shinkai_sheet = { workspace = true }
tokio = { workspace = true, features = ["full"] }
blake3 = { workspace = true }
chrono = { workspace = true }
bincode = "1.3.3"
serde_json = { workspace = true }
rust_decimal = "1.17.0"
rand = { workspace = true }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
hex = { workspace = true }
async-trait = "0.1.74"
rocksdb = { workspace = true, features = ["lz4"] }
serde = { workspace = true, features = ["derive"] }
