[package]
name = "shinkai_embedding"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
bincode = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json", "tokio-native-tls", "blocking"] }
lazy_static = { workspace = true }
async-trait = { workspace = true }
keyphrases = { workspace = true }
futures = { workspace = true }
csv = { workspace = true }
utoipa = { workspace = true }
regex = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]