[package]
name = "shinkai_fs_mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = "3.0"
chrono = { workspace = true }
chrono-tz = { workspace = true }
multipart = "0.17"
reqwest = { workspace = true }
dotenv = "0.15.0"
base64 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
libsodium-sys-stable = "1.20.5"
aes-gcm = "0.10.3"
async-channel = "1.6.1"
warp = "0.3.7"

[dependencies.rocksdb]
workspace = true
features = ["lz4"]

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
tempfile = "3.2.0"
filetime = "0.2.14"
