[package]
name = "shinkai_fs_mirror"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
clap = "3.0"
chrono = { workspace = true }
multipart = "0.17"
reqwest = { workspace = true }
dotenv = "0.15.0"
base64 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
libsodium-sys-stable = "1.20.5"
aes-gcm = "0.10.3"
rocksdb = { workspace = true, features = ["lz4"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = "3.2.0"
filetime = "0.2.14"
