[package]
name = "shinkai_file_synchronizer"
version = "0.1.0"
edition = "2018"

[dependencies]
tempfile = "3.10.1"
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
serde = "1.0.188"
serde_derive = "1.0.188"

x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.4"
