[package]
name = "shinkai_file_synchronizer"
version = "0.1.0"
edition = "2021"

[dependencies]
shinkai_message_primitives = { path = "../shinkai-message-primitives" }
tempfile = "3.10.1"
serde = "1.0.188"
serde_derive = "1.0.188"

x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand = "0.8.4"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.72"
serde_json = "1.0.105"

multipart = "0.17"
reqwest = "0.11.26"
dotenv = "0.15.0"
base64 = "0.22.0"
hex = "0.4.3"
libsodium-sys-stable = "1.20.5"
