[package]
name = "shinkai_fs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_sqlite = { workspace = true }
shinkai_ocr = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
lazy_static = "1.5.0"
async-trait = { workspace = true }
keyphrases = { workspace = true }
futures = { workspace = true }

csv = "1.1.6"
utoipa = "4.2.3"
regex = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]
