[package]
name = "shinkai_fs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
shinkai_message_primitives = { workspace = true }
shinkai_embedding = { workspace = true }
shinkai_sqlite = { workspace = true }
shinkai_ocr = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }
# tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
comrak = { version = "0.22.0", default-features = true }
thiserror = "2.0.3"
reqwest = { workspace = true }
lazy_static = "1.5.0"
async-trait = { workspace = true }
keyphrases = { workspace = true }
futures = { workspace = true }
scraper = "0.19.0"
urlencoding = "2.1.0"

csv = "1.1.6"
utoipa = "4.2.3"
regex = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
tempfile = "3.2"

[[test]]
name = "pdf_parsing_tests"
path = "tests/pdf_parsing_tests.rs"
required-features = ["static-pdf-parser"]

# [[test]]
# name = "vector_resource_tests"
# path = "tests/vector_resource_tests.rs"
