[package]
name = "shinkai_http_api"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
chrono = { workspace = true }
bytes = "1.10.1"
async-trait = { workspace = true }
once_cell = "1.19.0"
warp = { version = "0.3.7", features = ["compression-gzip", "tls"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-channel = "1.6.1"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }
ed25519-dalek = "2.1.0"
shinkai_message_primitives = { workspace = true }
shinkai_tools_primitives = { workspace = true }
reqwest = { workspace = true }
tokio-stream = "0.1.10"
rand = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.23"
rustls = "0.20"
hyper = { version = "0.14.30", features = ["server"] }
rustls-pemfile = "1.0.3"
mcp_sdk_core = { package = "mcp-core", git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
mcp_sdk_server = { package = "mcp-server", git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
tokio-util = { workspace = true, features = ["codec"] }
uuid = { workspace = true, features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = { workspace = true }
rmcp = { version = "0.1", features = ["server", "macros"] }

[dependencies.serde]
workspace = true
features = ["derive"]
