[package]
name = "shinkai_http_api"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
utoipa = { workspace = true }
utoipa-swagger-ui = "7.1.0"
chrono = { workspace = true }
bytes = "1.10.1"
async-trait = { workspace = true }
once_cell = "1.19.0"
warp = { workspace = true, features = ["compression-gzip", "tls"] }
serde_json = { workspace = true }
futures = { workspace = true }
async-channel = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
shinkai_message_primitives = { workspace = true }
shinkai_tools_primitives = { workspace = true }
reqwest = { workspace = true }
tokio-stream = "0.1.10"
rand = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.23"
rustls = "0.20"
hyper = { version = "0.14.30", features = ["server"] }
rustls-pemfile = "1.0.3"
tokio-util = { workspace = true, features = ["codec"] }
uuid = { workspace = true, features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = { workspace = true }
rmcp = { version = "0.1", features = ["server", "macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

[dependencies.serde]
workspace = true
features = ["derive"]
